# group3

./: .gitattributes  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  cmake_install.cmake  game  imgui.ini  main.cpp  menv
Networking/: ClientGame.cpp  ClientGame.h  ClientNetwork.cpp  ClientNetwork.h  Makefile  NetworkData.h  NetworkServices.cpp  NetworkServices.h  README.md  ServerGame.cpp  ServerGame.h  ServerNetwork.cpp  ServerNetwork.h  a.out  client.cpp  main.cpp  notes.txt  server.cpp  srv-addrs.c
assimp/: Makefile  assimp.pc  cmake_install.cmake  cmake_uninstall.cmake
assimp/code/: Makefile  cmake_install.cmake
assimp/include/assimp/: revision.h
assimp/test/: Makefile  cmake_install.cmake
assimp/test/headercheck/: Makefile  cmake_install.cmake
dependencies/assimp/: CMakeLists.txt
docs/: network.md  tests.md
docs/html/: __features_8hpp.html  __features_8hpp_source.html  __fixes_8hpp.html  __fixes_8hpp_source.html  __noise_8hpp.html  __noise_8hpp.js  __noise_8hpp_source.html  __swizzle_8hpp.html  __swizzle_8hpp.js  __swizzle_8hpp_source.html  __swizzle__func_8hpp.html  __swizzle__func_8hpp_source.html  __vectorize_8hpp.html  __vectorize_8hpp_source.html  _camera_8cpp.html  _camera_8h.html  _camera_8h_source.html  _cube_8cpp.html  _cube_8h.html  _cube_8h.js  _cube_8h_source.html  _shader_8cpp.html  _shader_8cpp.js  _shader_8h.html  _shader_8h.js  _shader_8h_source.html  _tokenizer_8cpp.html  _tokenizer_8cpp.js  _tokenizer_8h.html  _tokenizer_8h.js  _tokenizer_8h_source.html  _window_8cpp.html  _window_8cpp.js  _window_8h.html  _window_8h.js  _window_8h_source.html  annotated.html  annotated_dup.js  associated__min__max_8hpp.html  associated__min__max_8hpp.js  (+2295 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_5.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+100 more)
docs/latex/: __features_8hpp.tex  __features_8hpp_source.tex  __fixes_8hpp.tex  __fixes_8hpp_source.tex  __noise_8hpp.tex  __noise_8hpp_source.tex  __swizzle_8hpp.tex  __swizzle_8hpp_source.tex  __swizzle__func_8hpp.tex  __swizzle__func_8hpp_source.tex  __vectorize_8hpp.tex  __vectorize_8hpp_source.tex  _camera_8cpp.tex  _camera_8h.tex  _camera_8h_source.tex  _cube_8cpp.tex  _cube_8h.tex  _cube_8h_source.tex  _shader_8cpp.tex  _shader_8h.tex  _shader_8h_source.tex  _tokenizer_8cpp.tex  _tokenizer_8h.tex  _tokenizer_8h_source.tex  _window_8cpp.tex  _window_8h.tex  _window_8h_source.tex  annotated.tex  associated__min__max_8hpp.tex  associated__min__max_8hpp_source.tex  associated__min__max_8inl.tex  associated__min__max_8inl_source.tex  bit_8hpp.tex  bit_8hpp_source.tex  bit_8inl.tex  bit_8inl_source.tex  bitfield_8hpp.tex  bitfield_8hpp_source.tex  bitfield_8inl.tex  bitfield_8inl_source.tex  (+1354 more)
include/: AABB.h  AABB_loader.h  AnInstance.h  AnimState.h  Animation.h  AnimationPlayer.h  Artifact.h  AudioManager.h  Camera.h  Channel.h  CharState.h  Character.h  ClientLogic.h  Cube.h  Joint.h  Mesh.h  MeshInstance.h  Model.h  ModelManager.h  ModelType.h  NPCs.h  RenderMode.h  Scene.h  ServerLogic.h  Shader.h  ShaderManager.h  Skeleton.h  Texture.h  TextureManager.h  Window.h  character.h  core.h  platform.h  utils.h
minigame/: minigame.cpp  minigame.h
minigame/include/: MiniCharacter.h  character.h  platform.h  shader_utils.h  window.h
minigame/shaders/: quad.frag  quad.vert
minigame/src/: MiniCharacter.cpp  character.cpp  platform.cpp  shader_utils.cpp  window.cpp
models/: Running.fbx  buddha.ply
models/items/: Baton.fbx  FlashLight.fbx  TaserGun.fbx
models/items/artifacts/: asianPainting_item.fbx  asianPainting_item_old.fbx
models/map/: Museum Map_Without Artifacts.fbx
models/map/artefacts/: AsianPainting.fbx  Michelangelo.fbx  Modorian.fbx  MonaLisa.fbx  SittingSkeleton.fbx  StarryNight.fbx  TorsoStatue.fbx
network/: client.cpp  server.cpp
packets/: CursorPacket.cpp  CursorPacket.h  EndGamePacket.cpp  EndGamePacket.h  GuiUpdatePacket.cpp  GuiUpdatePacket.h  InitMinigamePacket.cpp  InitMinigamePacket.h  InitPacket.cpp  InitPacket.h  InitPlayerPacket.cpp  InitPlayerPacket.h  KeyPacket.cpp  KeyPacket.h  MinigameCharacterPacket.cpp  MinigameCharacterPacket.h  MinigameFinishedPacket.cpp  MinigameFinishedPacket.h  NPCPacket.cpp  NPCPacket.h  Packet.cpp  Packet.h  PacketFactory.cpp  PacketFactory.h  Packet_test.cpp  StateUpdatePacket.cpp  StateUpdatePacket.h  TimeUpdate.cpp  TimeUpdate.h  WinPacket.cpp  WinPacket.h  packet.cpp  packet.h  packet_types.md
shaders/: anim_shader.frag  anim_shader.vert  anim_shader_multi.vert  anim_shader_multi_uv.vert  anim_shader_uv.frag  shader.frag  shader.vert  shader_uv.frag  shader_uv.vert
src/: AABB.cpp  AABB_loader.cpp  AnInstance.cpp  Animation.cpp  AnimationPlayer.cpp  Artifact.cpp  AudioManager.cpp  Camera.cpp  Channel.cpp  Character.cpp  ClientLogic.cpp  Cube.cpp  Joint.cpp  Mesh.cpp  MeshInstance.cpp  Model.cpp  ModelManager.cpp  ModelTypes.cpp  NPCs.cpp  Scene.cpp  ServerLogic.cpp  Shader.cpp  ShaderManager.cpp  Skeleton.cpp  Texture.cpp  TextureManager.cpp  Window.cpp  character.cpp  platform.cpp  utils.cpp  window.cpp
